--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,140 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  width: 100vw;
+  min-height: 100vh;
+  font-family: 'poppins',sans-serif;
+}
+
+.title{
+  font-size: 3rem;
+  margin:6vh;
+  /* border: 7px dashed rgb(1,17,160); */
+  padding: 1vh 5vw;
+  border-radius: 10px;
+  border: 1px solid #007933;
+  background-color: #1faa59;
+  color: black;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  flex-direction: column ;
+}
+
+.cards{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card{
+  width: 400px;
+  height: max-content;
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  align-items: center;
+  box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+
+}
+
+.card img{
+   max-width: 380px;
+   aspect-ratio: 1/1;
+   object-fit: cover;
+}
+
+.tour-info{
+  margin: 20px 5px;
+}
+
+.tours-price{
+  color: #1faa59;
+  font-size: 1.3rem;
+}
+
+.tours-name{
+  font-size: 1.5rem;
+}
+
+.card span{
+   color:#12b0e8;
+   cursor: pointer;
+}
+
+.card button{
+  margin-top: 18px;
+  padding: 10px 80px;
+  border:2px solid #1faa59;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  /* background-color: #b4161b21; */
+  background-color: black;
+  color:#1faa59;
+}
+
+.card button:hover{
+  /* background-color: red; */
+  background-color: #1faa59;
+  color: black;
+  transition: all 0.2s;
+}
+
+.refresh{
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.head{
+  font-size: 2rem;
+}
+
+.btnWhite{
+  padding: 10px 18px;
+  margin-top: 18px;
+  color: rgb(198, 198, 198);
+  border: none;
+  cursor: pointer;
+}
+
+.btnWhite:hover{
+  background-color: white;
+  color: black;
+  transition: all 0.2s;
+}
+
+.placeName{
+   margin-top: 0.8rem;
+   font-style: italic;
+   font-weight: 500;
+   letter-spacing: 1.5px;
+}
+@media only screen and (max-width: 390px) {
+  .title{
+    font-size: 1.8rem;
+  }
+
+  .card img{
+    width: calc(100% - 1px);
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+  }
+
 }
